# economy

./: .gitignore  pyproject.toml
src/economy/: __init__.py  datamgmt.py  presets.py  series.py
